5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1728_2497.log
== TEST (2019-05-22 18:49:09) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = int(input())
	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:49:27) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = int(input())
	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:50:08) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = int(input())
	print(round(rend, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:50:48) 
-- CODE:
qi = float(input("Quantia inicial: "))
t = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = int(input())
	print(round(rend, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:51:30) 
-- CODE:
qi = float(input("Quantia inicial: "))
t = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = int(input())
	print(round(rend, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:56:52) 
-- CODE:
qi = float(input("Quantia inicial: "))
t = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0+t

# Atualizacao de saldo
while (t>1):
	rend = saldo*juros
	saldo = saldo + rend
	t = int(input())
	print(round(rend,2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:03:42) 
-- CODE:
qi = float(input("Quantia inicial: "))
t = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t>1):
	rend = saldo*juros
	saldo = saldo + rend
	t = int(input())
	print(round(rend,2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 18:53:18) 
-- CODE:
qi = float(input("Quantia inicial: "))
t = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t>1):
	rend = saldo*juros
	saldo = saldo + rend
	t = int(input())
	print(round(rend,2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 18:55:04) 
-- CODE:
qi = float(input("Quantia inicial: "))
t = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t>1):
	rend = saldo*juros
	saldo = saldo + rend
	t = int(input())
	print(round(rend,2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 18:56:01) 
-- CODE:
qi = float(input("Quantia inicial: "))
t = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t>1):
	rend = saldo*juros
	saldo = saldo + rend
	print(round(rend,2)) # Exibicao de resultados
	t = int(input())
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:02:49) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*juros
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:03:31) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*juros
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
2301.0
11505.0
57525.0
287625.0
1438125.0
7190625.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:03:51) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.4
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*juros
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
230.1
322.14
451.0
631.39
883.95
1237.53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:04:49) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*juros
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:05:45) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*juros
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 19:06:02) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*juros
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- EXECUTION TIME:
0.652813
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
23.01
23.93
24.89
25.88
26.92
28.0
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
33.02
34.34
35.71
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
23.01
23.93
24.89
25.88
26.92
28.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 19:06:03) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*juros
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- EXECUTION TIME:
1.26741
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
23.01
23.93
24.89
25.88
26.92
28.0
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
33.02
34.34
35.71
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
51.03
53.07
55.19
57.4
59.69
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:06:25) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*(1+juros)
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
598.26
1220.45
2489.72
5079.03
10361.21
21136.88
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 19:06:46) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*(1+juros)
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- EXECUTION TIME:
0.536667
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
1220.45
2489.72
5079.03
10361.21
21136.88
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
1751.17
3572.38
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
2706.42
5521.09
11263.03
22976.59
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:08:57) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*juros/100
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:10:57) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*(juros/100)
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 19:11:08) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*(juros/100)
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- EXECUTION TIME:
0.536677
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
23.01
23.93
24.89
25.88
26.92
28.0
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
33.02
34.34
35.71
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
23.01
23.93
24.89
25.88
26.92
28.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 19:11:10) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*(juros/100)
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- EXECUTION TIME:
1.26153
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
23.01
23.93
24.89
25.88
26.92
28.0
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
33.02
34.34
35.71
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
51.03
53.07
55.19
57.4
59.69
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:11:33) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*(juros/100)
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:11:34) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*(juros/100)
	saldo = saldo + rend
	t = t+1
	
	print(round(rend,2)) # Exibicao de resultados
-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:12:58) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*(juros/100)
	saldo = saldo + rend
	t = t+1
	
	print(round(saldo,2)) # Exibicao de resultados
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 19:13:06) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo=qi     # Variavel acumuladora

# Valor inicial da variavel contadora
t=0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo*(juros/100)
	saldo = saldo + rend
	t = t+1
	
	print(round(saldo,2)) # Exibicao de resultados
-- EXECUTION TIME:
0.692051
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
